--- a/aitest.ipynb
+++ b/aitest.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,6 +139,117 @@
     "  def initialize_hidden_state(self):\n",
     "    return tf.zeros((self.batch_sz, self.enc_units))\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "done init gru \n",
+      "done init gru \n",
+      "in call \n",
+      "tf.Tensor(\n",
+      "[[1 2 3 5 4 0]\n",
+      " [1 2 3 7 5 4]], shape=(2, 6), dtype=int32)\n",
+      "after embedding\n",
+      "tf.Tensor(\n",
+      "[[[ 0.02373388 -0.04817441  0.00190314]\n",
+      "  [ 0.01570146  0.03898109 -0.01314337]\n",
+      "  [-0.02908884 -0.03115588  0.04987849]\n",
+      "  [ 0.01183702 -0.04894618  0.01673203]\n",
+      "  [ 0.00622917  0.01814096 -0.0026949 ]\n",
+      "  [ 0.03724725 -0.00412703 -0.01082895]]\n",
+      "\n",
+      " [[ 0.02373388 -0.04817441  0.00190314]\n",
+      "  [ 0.01570146  0.03898109 -0.01314337]\n",
+      "  [-0.02908884 -0.03115588  0.04987849]\n",
+      "  [-0.02108764  0.03351064 -0.02924147]\n",
+      "  [ 0.01183702 -0.04894618  0.01673203]\n",
+      "  [ 0.00622917  0.01814096 -0.0026949 ]]], shape=(2, 6, 3), dtype=float32)\n",
+      "Encoder output shape: (batch size, sequence length, units) (2, 6, 1024)\n",
+      "Encoder Hidden state shape: (batch size, units) (2, 1024)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "BUFFER_SIZE = len(input_tensor)\n",
+    "BATCH_SIZE = 2\n",
+    "steps_per_epoch = len(input_tensor)//BATCH_SIZE\n",
+    "embedding_dim = 3  ### originally 256\n",
+    "units = 1024\n",
+    "vocab_inp_size = len(inp_lang.word_index)+1\n",
+    "vocab_tar_size = len(targ_lang.word_index)+1\n",
+    "\n",
+    "\n",
+    "dataset = tf.data.Dataset.from_tensor_slices((input_tensor, target_tensor)).shuffle(BUFFER_SIZE)\n",
+    "dataset = dataset.batch(BATCH_SIZE, drop_remainder=True)\n",
+    "\n",
+    "encoder = Encoder(vocab_inp_size, embedding_dim, units, BATCH_SIZE)\n",
+    "\n",
+    "example_input_batch, example_target_batch = next(iter(dataset))\n",
+    "\n",
+    "sample_hidden = encoder.initialize_hidden_state()\n",
+    "\n",
+    "encoder = Encoder(vocab_inp_size, embedding_dim, units, 2)\n",
+    "sample_output, sample_hidden = encoder(example_input_batch, sample_hidden)\n",
+    "print('Encoder output shape: (batch size, sequence length, units)', sample_output.shape)\n",
+    "print('Encoder Hidden state shape: (batch size, units)', sample_hidden.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'sample_hidden' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-5014641b0857>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[0mattention_layer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mBahdanauAttention\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 26\u001b[1;33m \u001b[0mattention_result\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mattention_weights\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mattention_layer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msample_hidden\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msample_output\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     27\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Attention result shape: (batch size, units)\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mattention_result\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'sample_hidden' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "class BahdanauAttention(tf.keras.layers.Layer):\n",
+    "  def __init__(self, units):\n",
+    "    super(BahdanauAttention, self).__init__()\n",
+    "    self.W1 = tf.keras.layers.Dense(units)\n",
+    "    self.W2 = tf.keras.layers.Dense(units)\n",
+    "    self.V = tf.keras.layers.Dense(1)\n",
+    "  def call(self, query, values):\n",
+    "    # query hidden state shape == (batch_size, hidden size)\n",
+    "    # query_with_time_axis shape == (batch_size, 1, hidden size)\n",
+    "    # values shape == (batch_size, max_len, hidden size)\n",
+    "    # we are doing this to broadcast addition along the time axis to calculate the score\n",
+    "    query_with_time_axis = tf.expand_dims(query, 1)\n",
+    "    # score shape == (batch_size, max_length, 1)\n",
+    "    # we get 1 at the last axis because we are applying score to self.V\n",
+    "    # the shape of the tensor before applying self.V is (batch_size, max_length, units)\n",
+    "    score = self.V(tf.nn.tanh(\n",
+    "        self.W1(query_with_time_axis) + self.W2(values)))\n",
+    "    # attention_weights shape == (batch_size, max_length, 1)\n",
+    "    attention_weights = tf.nn.softmax(score, axis=1)\n",
+    "    # context_vector shape after sum == (batch_size, hidden_size)\n",
+    "    context_vector = attention_weights * values\n",
+    "    context_vector = tf.reduce_sum(context_vector, axis=1)\n",
+    "    return context_vector, attention_weights\n",
+    "\n",
+    "attention_layer = BahdanauAttention(10)\n",
+    "attention_result, attention_weights = attention_layer(sample_hidden, sample_output)\n",
+    "\n",
+    "print(\"Attention result shape: (batch size, units)\", attention_result.shape)\n",
+    "print(\"Attention weights shape: (batch_size, sequence_length, 1)\", attention_weights.shape)\n"
    ]
   },
   {
