--- a/install.txt
+++ b/install.txt
@@ -1,4 +1,6 @@
 HKEY_LOCAL_MACHINE\SYSTEM\CurrentControlSet\Control\FileSystem@LongPathsEnabled to 1
 pip3 install --user --upgrade tensorflow
+pip install tf-nightly-gup
+
 
 python -m pip install -U matplotlib
