--- a/install.txt
+++ b/install.txt
@@ -6,5 +6,7 @@ install cudnn and toolkit
 pip3 install --user --upgrade tensorflow
 pip3 install --user tensorflow-gpu
 pip3 install -U scikit-learn
+pip3 install tf-nightly-gpu
+pip3 uninstall tf-nightly-gpu
 
 python -m pip install -U matplotlib
